# evoselfcode

./: .gitignore  Makefile  README.md  pyproject.toml  研究大纲.md
configs/: datagen.yaml  model.yaml  skeleton.yaml
configs/datagen/: codegen.yaml  convert.yaml  fim.yaml  l2r.yaml  rating.yaml  skeleton.yaml
docs/: API_COMPATIBILITY.md  ARCHITECTURE.md  ARCHITECTURE_REFACTOR.md  ASYNC_CLIENT_USAGE.md  CLIENT_USAGE.md  DATAGEN_Qwen2.5_Coder_32B.md  DATAGEN_USAGE.md  DATA_FORMAT.md  QUICK_START.md
evoselfcode/: __init__.py  config.py  constants.py  io_utils.py  logging_utils.py  model_config.py
evoselfcode/cli/: __main__.py  datagen_commands.py  eval_commands.py  main.py  pipeline_commands.py
evoselfcode/clients/: __init__.py  async_openai.py  base.py  scoring.py
evoselfcode/core/: __init__.py  client_manager.py  config_manager.py  filter_chain.py  prompt_builder.py
evoselfcode/datagen/: prompts.py
evoselfcode/evaluation/: __init__.py  bigcodebench.py  humaneval.py  lcb.py  mbpp.py
evoselfcode/pipeline/: dual_model.py  filtering.py  iteration.py  sampling.py  scoring.py  train_sft.py
evoselfcode/services/: __init__.py  datagen_service.py
evoselfcode/utils/: logger.py
scripts/: README.md  generate_funcnames.py  generate_funcnames.sh  generate_funcnames_fim.sh  generate_funcnames_l2r.sh  generate_skeletons.py  generate_skeletons_fim.sh  generate_skeletons_l2r.sh  test_client.py
scripts/datagen/: RATING_ANALYSIS.md  analyze_ratings.py  convert_to_chatml.py  convert_to_chatml.sh  convert_to_chatml_fim.sh  convert_to_chatml_l2r.sh  generate_code.py  generate_code_fim.sh  generate_code_l2r.sh  generate_funcnames.py  generate_funcnames.sh  generate_funcnames_fim.sh  generate_funcnames_l2r.sh  generate_problems.py  generate_problems.sh  generate_problems_fim.sh  generate_problems_l2r.sh  generate_ratings.py  generate_ratings_fim.sh  generate_ratings_l2r.sh  generate_skeletons.py  generate_skeletons_fim.sh  generate_skeletons_l2r.sh
(+18 files in other folders)
